docs+launcher: one-command operator setup via run.sh
For testers + new operators. Replaces the manual 4-step boot procedure
(download JAR → keygen → write config.env → launch + curl L0+L1 joins)
with `./run.sh`.

run.sh handles:
- Java 17 check with platform-specific install hints
- JAR download + SHA-256 verification (idempotent — skip if matched)
- Operator keystore generation via the bundled Reality keytool
- config.env scaffolding with sensible NAT-friendly defaults
- JVM launch with all 28 CLI flags assembled from env
- Polling for both L0 + L1 HTTP servers to bind before posting
  cluster joins (works around an SDK ordering bug)
- Manual /cluster/join POSTs against the local cli ports
- Wait-for-Ready loop with clear pass/fail output
- --stop / --status / --logs / --clean subcommands

Defaults pinned to release v0.1.4-testnet:
- Reality SDK build 1095 (commit 608b68dc)
- Sentiment chain bootstrap host moved to 46.101.82.227 (lon1 droplet
  superseded the prior 167.253.65.37 host so third-party nodes can
  actually peer-join — earlier setup gossiped 127.0.0.1)
- JAR SHA-256 9005c5e23991a756c172cdc7567ef27a6cd6f4d42f9fc4e6a562dbd66e6e3b29

README rewritten around the one-line install. Reward mechanics +
file layout + troubleshooting kept; manual-launch internals dropped
(if you need them, the script is self-documenting).